--- a/templates/partials/_logo.html
+++ b/templates/partials/_logo.html
@@ -1,6 +1,6 @@
 
     {% block content%}
-    <div class="formul">
+    <div class="form">
         <img  src="{{url_for('static', filename='logo.png')}}" alt="" width="150px">
     </div>
     {% endblock %}
