--- a/templates/revenu.html
+++ b/templates/revenu.html
@@ -12,7 +12,7 @@
     {% endblock%}
     
     <div class="form">
-        <form action="/depense" method="POST">
+        <form action="/revenu" method="POST">
     <table  >
         <tbody >
             <tr >
@@ -36,8 +36,8 @@
                 </td>
             </tr>
             <tr>
-                <td >
-                    <input   style="width:100% " type="submit"  class="vert">
+                <td class="vert">
+                    <input   style="width:100% " type="submit" class="vert" >
                 </td>
             </tr>
         </tbody>
