--- a/templates/updateDepense.html
+++ b/templates/updateDepense.html
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <td >
-                    <input  value="modifier" style="width:100% " type="submit"  class="vert">
+                    <input  value="modifier" style="width:100% ; cursor:pointer" type="submit"  class="vert">
                 </td>
             </tr>
         </tbody>
