controle de saisi du montant

--- a/templates/revenu.html
+++ b/templates/revenu.html
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <td class="vert">
-                    <input   style="width:100% " type="submit" class="vert" >
+                    <input   style="width:100%; cursor:pointer " type="submit" class="vert" >
                 </td>
             </tr>
         </tbody>
