controle de saisi du montant et de la depense

--- a/templates/depense.html
+++ b/templates/depense.html
@@ -44,5 +44,10 @@
     </table>
 </form>
 </div>
+{%if error_message %}
+    <div class="form" style="margin-top:50px; color:red">
+        {{error_message}}
+      </div>
+{% endif %}
 </body>
 </html>
