--- a/templates/revenu.html
+++ b/templates/revenu.html
@@ -10,6 +10,7 @@
     {% block content%}
     {%include("partials/_logo.html")%}
     {% endblock%}
+
     
     <div class="form">
         <form action="/revenu" method="POST">
@@ -44,5 +45,10 @@
     </table>
 </form>
 </div>
+{%    if error_message %}
+    <div class="form" style="margin-top:50px; color:red">
+        {{error_message}}
+      </div>
+    {% endif %}
 </body>
 </html>
