--- a/templates/depense.html
+++ b/templates/depense.html
@@ -12,7 +12,7 @@
     {% endblock%}
     
     <div class="form">
-        <form action="/depense" method="POST">
+        <form  method="post">
     <table  >
         <tbody >
             <tr >
