--- a/templates/revenu.html
+++ b/templates/revenu.html
@@ -13,7 +13,7 @@
 
     
     <div class="form">
-        <form action="/revenu" method="POST">
+        <form  method="POST">
     <table  >
         <tbody >
             <tr >
